fix test nowrap

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --color-btn-shadow: hsl(30, 55%, 58%);
   --color-option-inactive: hsl(37, 11%, 35%);
   --color-option-active: hsl(30, 84%, 66%);
+  --color-progress: hsl(0, 51%, 41%);
   --text-right: hsl(140, 55%, 50%);
   --text-wrong: hsl(0, 70%, 55%);
 }
@@ -14,12 +15,13 @@
 [data-theme="light"] {
   --color-bg: hsl(195, 100%, 97%);
   --color-text: hsl(212, 30%, 24%);
-  --color-btn-inactive: hsl(208, 16%, 47%);
+  --color-btn-inactive: hsl(208, 60%, 68%);
   --color-btn-hover: hsl(190, 70%, 85%);
   --color-btn-pressed: hsl(190, 50%, 88%);
   --color-btn-shadow: hsl(180, 66%, 23%);
   --color-option-inactive: hsl(180, 13%, 64%);
   --color-option-active: hsl(180, 100%, 29%);
+  --color-progress: hsl(229, 51%, 41%);
   --text-right: hsl(135, 95%, 34%);
   --text-wrong: hsl(0, 70%, 45%);
 }
@@ -33,8 +35,10 @@
   --color-btn-shadow: hsl(200, 70%, 55%);
   --color-option-inactive: hsl(199, 25%, 38%);
   --color-option-active: hsl(200, 100%, 55%);
+  --color-progress: hsl(41, 87%, 54%);
   --text-right: hsl(140, 55%, 45%);
   --text-wrong: hsl(0, 70%, 50%);
+
 }
 
 [data-theme="cupcake"] {
@@ -46,6 +50,7 @@
   --color-btn-shadow: hsl(39, 71%, 55%);
   --color-option-inactive: hsl(27, 9%, 53%);
   --color-option-active: hsl(39, 71%, 60%);
+  --color-progress: hsl(19, 94%, 55%);
   --text-right: hsl(145, 55%, 50%);
   --text-wrong: hsl(0, 70%, 55%);
 }
@@ -138,10 +143,6 @@ header{
   font-size: 20px;
 }
 
-@keyframes blink {
-  0%, 50% { opacity: 1;}
-  51%,100% { opacity: 0;}
-}
 .restart:hover {
   color: var(--color-text);
   transform: scale(1.03);
@@ -160,16 +161,16 @@ footer {
 
 @media (min-width:1050px){
   body {
-    margin: 20px 200px;
+    margin: 20px 100px;
   }
 }
 
 @media (min-width: 800px) and (max-width: 1049px){
   body{
-    margin: 20px 80px;
+    margin: 20px 100px;
   }
   main {
-  padding: 40px 40px;
+  padding: 40px 0px;
   }
   .wide-menu {
     display: none;
@@ -181,7 +182,7 @@ footer {
 
 @media (max-width: 799px) {
   body{
-    margin: 20px 25px;
+    margin: 20px 10px;
   }
 
   .option-label{
@@ -192,7 +193,7 @@ footer {
     font-size: 20px;
   }
   main {
-  padding: 20px 20px;
+  padding: 20px 0px;
   }
 
   .words {
