--- a/src/components/main.css
+++ b/src/components/main.css
@@ -10,7 +10,6 @@ main {
   padding: 40px 30px;
 }
 
-
 .green-letter {
   color: var(--text-right);
 }
@@ -19,7 +18,6 @@ main {
   color: var(--text-wrong);
 }
 
-
 .words {
   font-size: 32px;
   padding: 20px;
@@ -27,23 +25,34 @@ main {
   border: 1px solid var(--color-text);
   border-radius: 4px;
   max-height: 280px;
-  overflow: hidden;
-  max-width: 1000px;
+  max-width: 1200px;
   display: inline-block;
+  overflow: hidden;
+  transition: opacity 0.25s ease-in-out; 
+  opacity: 1;
 }
 
 .cursor {
   animation: blink 1s steps(1) infinite;
   display: inline-block;
-  width: 0.40ch;
+  width: 0.30ch;
   margin-left: -4px;
+}
+
+@keyframes blink {
+  0%, 50% { opacity: 1;}
+  51%,100% { opacity: 0;}
 }
 
 .progress {
   margin-top: 10px;
 }
 
-.word {
-  display: inline-block;
+.word-container {
   white-space: nowrap;
+  display: inline-block;
+}
+
+.fade-out {
+  opacity: 0;
 }
